# TauriMan

./: Note.md  README.md  package.json  pnpm-lock.yaml
.github/back/: build.yml
.github/workflows/: build.yml
docs/: 2.md  3.md  hellogithub.md  pakeplus.md
docs/Release/: ConsoleApplication1.ipdb
docs/guitool/: LanguageSetting.xml
docs/testcmd/3dfile/: LRG1050L 光学支架2.x_t  LRG1080L 加强筋.x_t  LRG1140L 真空发生器固定板.x_t  LRM0460 支架座.x_t  LRM0500 加强筋.x_t  LRM0650 扩束镜定位块.x_t
docs/testcmd/ouput/: LRG1040L 光学支架1.prt  LRG1110L 光学支架3.prt  LRG1130L-01 吸附治具.prt  LRG1130L-02 吸附治具.prt  LRJ0830.prt  LRJ0870 吸附接头2.prt  LRM0430 气缸固定板.prt  LRM0440 吸附安装板.prt  LRM0450 支架板.prt  LRM0470 盖板.prt  LRM0550 激光器封光外筒.prt  LRM0560 激光器封光内筒.prt  LRM0580 光学模块底板(1).prt  LRM0590 光学模块侧板(1).prt  LRM0600 光学模块加强筋(1).prt
example/htmlwrap/: package.json
example/runwrap/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
example/runwrap/src/: App.vue  main.ts  style.scss
example/runwrap/src/components/: HelloWorld.vue
example/runwrap/src/lang/: index.ts
example/runwrap/src/utils/: common.ts
scripts/: test.cjs
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: man.json
src-tauri/config/www/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/tools/: comds.rs  init.rs  mod.rs  model.rs
