[package]
name = "tauriman"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauriman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tauri-plugin-shell = "2.2.1"
machine-uid = "0.5.3"
tauri-plugin-fs = "2.3.0"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-http = "2.4.4"
tauri-plugin-localhost = "2.2.0"
tauri-plugin-log = "2.4.0"
tauri-plugin-notification = "2.2.2"
tauri-plugin-os = "2.2.1"
tauri-plugin-persisted-scope = "2.2.2"
tauri-plugin-process = "2.2.1"
tauri-plugin-sql = { version = "2.2.0", features = ["mysql", "postgres", "sqlite"] }
tauri-plugin-upload = "2.2.1"
tauri-plugin-websocket = "2.3.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.3.0"
tauri-plugin-cli = "2.2.0"
tauri-plugin-global-shortcut = "2.2.1"
tauri-plugin-positioner = "2.2.0"
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-updater = "2.7.1"
tauri-plugin-window-state = "2.2.2"
